# hello_actions

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake_build.yml
